--- a/src/components/theme/theme.module.css
+++ b/src/components/theme/theme.module.css
@@ -1,11 +1,15 @@
-.bg-homePage {
+.bgHome {
   background: #00a8ff;
 }
 
-.bg-notesPage {
+.bgNotes {
   background: #9c88ff;
 }
 
-.bg-classCounter {
+.bgCounter {
+  background: #487eb0;
+}
+
+.bgProfile {
   background: #487eb0;
 }
